--- a/sass/ui/nav/navbar/_variables.scss
+++ b/sass/ui/nav/navbar/_variables.scss
@@ -7,6 +7,7 @@ $navbar-border-width: $border-width 0 !default;
 $navbar-padding: 0 0 !default;
 $navbar-width: 100% !default;
 
+$navbar-link-font-weight: 400;
 $navbar-link-background: transparent;
 $navbar-link-hover-background: transparent;
 $navbar-link-hover-color: $link-hover-color;
