--- a/sass/_placeholders.scss
+++ b/sass/_placeholders.scss
@@ -6,8 +6,8 @@
       @include prefix((transform: translateZ(0),
                        backface-visibility: hidden,
                        perspective: 1000),
-                      webkit moz ms);
-      @include prefix((transform: translate3d(0, 0, 0)), webkit moz ms);
+                      webkit ms);
+      @include prefix((transform: translate3d(0, 0, 0)), webkit ms);
     }
 
     %browser-reset {
