--- a/sass/type/_layout.scss
+++ b/sass/type/_layout.scss
@@ -7,6 +7,10 @@
       -webkit-text-size-adjust: none;
     }
 
+    pre {
+      -webkit-font-smoothing: auto;
+    }
+    
 
     body {
       text-rendering: optimizeLegibility;
