--- a/sass/type/_variables.scss
+++ b/sass/type/_variables.scss
@@ -3,7 +3,7 @@ $type-class: unquote("#{unquote(".")}#{$type-name}") !default;
 
 
 // Body
-$body-font: -apple-system, BlinkMacSystemFont, "Roboto", "Helvetica Neue", Arial, sans-serif !default;
+$body-font: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", Arial, sans-serif !default;
 $body-font-size: 16px !default;
 $body-font-color: $grey !default;
 $body-line-height: 1.1 !default;
@@ -11,7 +11,7 @@ $body-font-weight: 300 !default;
 
 
 // Headings */
-$heading-font: -apple-system, BlinkMacSystemFont, "Roboto", "Helvetica Neue", Arial, sans-serif !default;
+$heading-font: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", Arial, sans-serif !default;
 $heading-color: $grey !default;
 $heading-max-font-size: 48px !default;
 $heading-font-weight: 300 !default;
@@ -23,7 +23,7 @@ $heading-line-height: 1.1 !default;
 $paragraph-padding: 0 !default;
 $paragraph-margin: 0 0 1.2 !default;
 
-$paragraph-font: -apple-system, BlinkMacSystemFont, "Roboto", "Helvetica Neue", Arial, sans-serif !default;
+$paragraph-font: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", Arial, sans-serif !default;
 $paragraph-font-size: 16px !default;
 $paragraph-line-height: 1.4 !default;
 $paragraph-letter-spacing: initial !default;
