--- a/sass/ui/button/_core.scss
+++ b/sass/ui/button/_core.scss
@@ -7,6 +7,11 @@
 @import '../../colors/placeholders';
 @include colors-placeholders-init()
 
+@import '../../spacing/variables';
+@import '../../spacing/mixins';
+@import '../../spacing/placeholders';
+@include spacing-placeholders-init()
+
 @import '../../flexibility/variables';
 @import '../../flexibility/mixins';
 @import '../../flexibility/placeholders';
@@ -17,7 +22,6 @@
 
 @import 'variables';
 @import 'mixins';
-
 @import 'placeholders';
 @include button-placeholders-init();
 
